<resources>

    <!-- DATA -->
    <string name="facebook_user">begoandapps.test2@gmail.com</string>
    <string name="facebook_pass">begotest2</string>

    <!-- ACTIONS -->
    <string name="btn_forward">¡Adelante!</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_make_reservation">Reserva partida</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_search">Buscar</string>
    <string name="btn_make_reservation_in_club">Reserva pista</string>

    <!-- GENERAL -->
    <string name="app_name">PadelApp</string>
    <string name="app_sport">Paddel</string>

    <!-- TITLES -->
    <string name="title_login_screen">Register</string>
    <string name="title_tutorial_screen">Tutorial</string>
    <string name="title_dashboard_screen">Dashboard</string>
    <string name="title_search">Search</string>

    <!-- SPLASH -->
    <string name="splash_title">@string/app_sport</string>

    <!-- TUTORIAL -->
    <string name="tutorial_step_1_title">@string/app_sport</string>
    <string name="tutorial_step_1_subtitle">Encuentra pistas fácilmente y reserva al momento</string>
    <string name="tutorial_step_2_title">Busca pistas libres cerca de ti</string>
    <string name="tutorial_step_2_subtitle">Busca por ciudad o por nombre de club, mira las valoraciones y servicios que ofrece</string>
    <string name="tutorial_step_3_title">Reserva partidas al mejor precio</string>
    <string name="tutorial_step_3_subtitle">@string/tutorial_step_2_subtitle</string>
    <string name="tutorial_step_4_title">Guarda tus equipos y partidas habituales</string>
    <string name="tutorial_step_4_subtitle">Sabemos que te gusta jugar en el mismo sitio con la misma gente ¿o no?</string>

    <!-- LOGIN -->
    <string name="login_selection_description">Para reservar pista necesitamos saber algunos datos tuyos. Para buscar puedes acceder sin registrarte.</string>
    <string name="login_selection_register_facebook">Registrarse con Facebook</string>
    <string name="login_selection_register_manually">Registrarse manualmente</string>
    <string name="login_selection_register_later">Ya me registraré más tarde</string>

    <!-- FACEBOOK -->
    <string name="login_facebook_user">Nombre</string>
    <string name="login_facebook_pass">Email</string>
    <string name="login_facebook_btn">Conectar con Facebook</string>
    <string name="login_facebook_description">Necesitamos saber estos datos para verificar tu identidad</string>

    <!-- DASHBOARD -->
    <string name="dashboard_empty_msg">Todavía no has reservado ninguna partida</string>

    <!-- SEARCH -->
    <string name="search_title">Búsqueda de pista</string>
    <string name="search_subtitle_where">¿Dónde quieres jugar?</string>
    <string name="search_subtitle_when_date">¿Qué dia quieres jugar?</string>
    <string name="search_subtitle_when_time">¿A qué hora quieres jugar?</string>
    <string name="search_default_where_value">Cerca de mi</string>
    <string name="search_default_when_date_value">Hoy</string>
    <string name="search_default_when_time_value">A cualquier hora</string>
    <string name="search_hint">Introduce</string>

    <!-- BY DATE -->
    <string name="search_by_date_default_year">2016</string>
    <string name="search_by_date_default_date">Lunes, 18 Jul</string>

    <!-- BY TIME -->
    <string name="search_by_time_default_time">3:30</string>

    <!-- RESULT -->
    <string name="search_result_open">Abierto</string>
    <string name="search_result_closed">Cerrado</string>
    <string name="search_result_timetable_pattern">Pattern</string>

    <!-- DETAIL -->
    <string name="search_detail_info_title">Info</string>
    <string name="search_detail_comments_title">Comments</string>

    <!-- TYPE -->
    <string name="search_result_club_type_indoor">INDOOR</string>
    <string name="search_result_club_type_outdoor">OUTDOOR</string>


    <!-- DUMMY -->
    <string name="dummy_title">Title</string>
    <string name="dummy_subtitle">Subtitle</string>
    <string name="dummy_descrip">Descrip</string>
    <string name="dummy_padel_club_name">Padel Indoor Badalona</string>
    <string name="dummy_padel_club_time">Abierto . 10:00 - 23:00</string>
    <string name="dummy_padel_club_distance">3,2 Km</string>
    <string name="dummy_padel_club_type">@string/search_result_club_type_outdoor</string>
    <string name="dummy_padel_club_price">16 €</string>
</resources>
