<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_facebook_container"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.begoandapps.padelapp.components.AppEditText
        android:id="@+id/login_facebook_user"

        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:hint="@string/login_facebook_user"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <com.begoandapps.padelapp.components.AppEditText
        android:id="@+id/login_facebook_password"

        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:hint="@string/login_facebook_pass"
        android:inputType="textPassword"

        app:layout_constraintTop_toBottomOf="@+id/login_facebook_user"
        tools:layout_editor_absoluteX="8dp" />

    <com.begoandapps.padelapp.components.AppButton
        android:id="@+id/login_facebook_btn"

        style="@style/Button.Blue"

        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:text="@string/login_facebook_btn"

        app:layout_constraintTop_toBottomOf="@+id/login_facebook_password"
        tools:layout_editor_absoluteX="8dp" />

    <com.begoandapps.padelapp.components.AppTextView
        android:id="@+id/login_facebook_info"

        style="@style/BaseText.Content.Black"

        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:text="@string/login_facebook_description"

        app:layout_constraintTop_toBottomOf="@+id/login_facebook_btn"
        tools:layout_editor_absoluteX="8dp" />

    <com.begoandapps.padelapp.components.AppButton
        android:id="@+id/login_facebook_main_btn"

        style="@style/Button.GreenReverse"

        android:layout_width="match_parent"
        android:layout_height="@dimen/button_h"

        android:text="@string/btn_aceptar"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>