<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_facebook_container"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="485dp"

        android:paddingLeft="@dimen/login_selection_text_horiz_padding"
        android:paddingStart="@dimen/login_selection_text_horiz_padding"
        android:paddingRight="@dimen/login_selection_text_horiz_padding"
        android:paddingEnd="@dimen/login_selection_text_horiz_padding"

        android:layout_marginTop="@dimen/login_facebook_user_margin_top"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        >

        <com.begoandapps.padelapp.components.AppEditText
            android:id="@+id/login_facebook_user"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/login_facebook_user_margin_bottom"

            android:padding="3dp"

            android:hint="@string/login_facebook_user"

            android:layout_alignParentTop="true"
            />

        <com.begoandapps.padelapp.components.AppEditText
            android:id="@+id/login_facebook_password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="3dp"

            android:hint="@string/login_facebook_pass"
            android:inputType="textPassword"

            android:layout_below="@id/login_facebook_user"
            />

        <com.begoandapps.padelapp.components.AppButton
            android:id="@+id/login_facebook_btn"

            style="@style/Button.Round.Blue"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login_facebook_btn"


            android:layout_marginBottom="@dimen/login_facebook_btn_margin_bottom"
            android:layout_above="@+id/login_facebook_info"
            />

        <com.begoandapps.padelapp.components.AppTextView
            android:id="@+id/login_facebook_info"

            style="@style/BaseText.Content.Black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login_facebook_description"

            android:layout_marginBottom="@dimen/login_facebook_descrip_margin_bottom"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <com.begoandapps.padelapp.components.AppButton
        android:id="@+id/login_facebook_main_btn"

        style="@style/Button.GreenReverse"

        android:layout_width="0dp"
        android:layout_height="@dimen/button_h"

        android:text="@string/btn_accept"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>